// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "doc.grpc.fileManage";
option java_outer_classname = "FileManageProto";
option objc_class_prefix = "DOC";

// 定义包名，避免命名冲突
package doc;

// 定义服务
service FileManage {
  rpc saveFile (SaveFileRequest) returns (SaveFileResponse) {}
  rpc copyFile (CopyFileRequest) returns (CopyFileResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message SaveFileRequest {
  string fileCode = 1;
  Operator operator = 2;
  string fileInfos = 3;
  string extInfos = 4;
  bytes buffer = 5;
  string folder = 6;
}

message SaveFileResponse {
  string fileInfos = 1;
}

message Operator {
  string userCode = 1;
  string realName = 2;
}

message CopyFileRequest {
  string originalFileCode = 1;
  Operator operator = 2;
  string fileInfos = 3;
  string folder = 4;
}

message CopyFileResponse {
  string fileInfos = 1;
}